--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -1,3 +1,4 @@
 mensagem.invalida=Mensagem inv\u00E1lida
 recurso.naoencontrado=Recurso n\u00E3o encontrado
+recurso.operacao-nao-permitida=Opera\u00E7\u00E3o n\u00E3o permitida
 categoria.nome=Nome
